fix overflow

--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .ball {
@@ -9,8 +14,4 @@ body {
   text-align: center;
   vertical-align: middle;
   background-image: linear-gradient(72deg, cyan, magenta);
-}
-
-.demo {
-  height: 100vh;
 }
